Bug 283844 - KMail (KDE 4.7.2, Kubuntu 11.10, 64 bit) has crashed during IMAP mail download from Yahoo account
Summary: KMail (KDE 4.7.2, Kubuntu 11.10, 64 bit) has crashed during IMAP mail downloa...
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: IMAP resource (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Kevin Ottens
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-12 08:16 UTC by Thomas Dreibholz
Modified: 2011-11-12 16:25 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Dreibholz 2011-10-12 08:16:39 UTC
Application: akonadi_imap_resource (4.7)
KDE Platform Version: 4.7.1 (4.7.1)
Qt Version: 4.7.4
Operating System: Linux 3.0.0-12-generic x86_64
Distribution: Ubuntu 11.10

-- Information about the crash:
- What I was doing when the application crashed:
KMail (KDE 4.7.2, Kubuntu 11.10, 64 bit) has crashed during IMAP mail download from Yahoo account.

-- Backtrace:
Application: Yahoo of type IMAP-E-Mail-Server (akonadi_imap_resource), signal: Segmentation fault
[Current thread is 1 (Thread 0x7fac806a6780 (LWP 2051))]

Thread 3 (Thread 0x7fac6ea0f700 (LWP 3858)):
#0  0xffffffffff60017b in ?? ()
#1  0x00007fac6ea0eb00 in ?? ()
#2  0x00007ffff63ff7e7 in ?? ()
Backtrace stopped: previous frame identical to this frame (corrupt stack?)

Thread 2 (Thread 0x7fac66dfa700 (LWP 7614)):
#0  0x00007fac7c0dc773 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007fac7aa2ef68 in g_main_context_poll (n_fds=1, fds=0x7fac68070cd0, timeout=-1, context=0x829eb0, priority=<optimized out>) at /build/buildd/glib2.0-2.30.0/./glib/gmain.c:3402
#2  g_main_context_iterate (context=0x829eb0, block=<optimized out>, dispatch=1, self=<optimized out>) at /build/buildd/glib2.0-2.30.0/./glib/gmain.c:3084
#3  0x00007fac7aa2f429 in g_main_context_iteration (context=0x829eb0, may_block=1) at /build/buildd/glib2.0-2.30.0/./glib/gmain.c:3152
#4  0x00007fac7fb20f3e in QEventDispatcherGlib::processEvents (this=0x91c880, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#5  0x00007fac7faf4cf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#6  0x00007fac7faf4ef7 in QEventLoop::exec (this=0x7fac66df9de0, flags=...) at kernel/qeventloop.cpp:201
#7  0x00007fac7fa0c27f in QThread::exec (this=<optimized out>) at thread/qthread.cpp:498
#8  0x00007fac7e734c13 in ?? () from /usr/lib/libkimap.so.4
#9  0x00007fac7fa0ed05 in QThreadPrivate::start (arg=0x92df00) at thread/qthread_unix.cpp:331
#10 0x00007fac7b997efc in start_thread (arg=0x7fac66dfa700) at pthread_create.c:304
#11 0x00007fac7c0e889d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#12 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fac806a6780 (LWP 2051)):
[KCrash Handler]
#6  QString (other=..., this=0x7ffff62d58c0) at /usr/include/qt4/QtCore/qstring.h:728
#7  ImapAccount::server (this=0x0) at ../../../resources/imap/imapaccount.cpp:48
#8  0x0000000000455442 in SessionPool::onCapabilitiesTestDone (this=0x8c6eb0, job=<optimized out>) at ../../../resources/imap/sessionpool.cpp:378
#9  0x0000000000456247 in SessionPool::qt_metacall (this=0x8c6eb0, _c=QMetaObject::InvokeMetaMethod, _id=11, _a=0x7ffff62d5b60) at ./sessionpool.moc:119
#10 0x00007fac7fb08eba in QMetaObject::activate (sender=0x9ca080, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7ffff62d5b60) at kernel/qobject.cpp:3278
#11 0x00007fac7c9f41d2 in KJob::result(KJob*) () from /usr/lib/libkdecore.so.5
#12 0x00007fac7c9f4210 in KJob::emitResult() () from /usr/lib/libkdecore.so.5
#13 0x00007fac7e71b104 in KIMAP::Job::connectionLost() () from /usr/lib/libkimap.so.4
#14 0x00007fac7e732ae3 in KIMAP::SessionPrivate::clearJobQueue() () from /usr/lib/libkimap.so.4
#15 0x00007fac7e733fdd in KIMAP::Session::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libkimap.so.4
#16 0x00007fac7fb0ca5e in QObject::event (this=0xa31c60, e=<optimized out>) at kernel/qobject.cpp:1217
#17 0x00007fac7eea6424 in notify_helper (e=0x7fac68033ed0, receiver=0xa31c60, this=0x759420) at kernel/qapplication.cpp:4486
#18 QApplicationPrivate::notify_helper (this=0x759420, receiver=0xa31c60, e=0x7fac68033ed0) at kernel/qapplication.cpp:4458
#19 0x00007fac7eeab291 in QApplication::notify (this=0x7ffff62d6410, receiver=0xa31c60, e=0x7fac68033ed0) at kernel/qapplication.cpp:4365
#20 0x00007fac7cfc41e6 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#21 0x00007fac7faf5afc in QCoreApplication::notifyInternal (this=0x7ffff62d6410, receiver=0xa31c60, event=0x7fac68033ed0) at kernel/qcoreapplication.cpp:787
#22 0x00007fac7faf951f in sendEvent (event=0x7fac68033ed0, receiver=0xa31c60) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#23 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x730800) at kernel/qcoreapplication.cpp:1428
#24 0x00007fac7fb20a73 in sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:220
#25 postEventSourceDispatch (s=<optimized out>) at kernel/qeventdispatcher_glib.cpp:277
#26 0x00007fac7aa2ea5d in g_main_dispatch (context=0x757400) at /build/buildd/glib2.0-2.30.0/./glib/gmain.c:2441
#27 g_main_context_dispatch (context=0x757400) at /build/buildd/glib2.0-2.30.0/./glib/gmain.c:3011
#28 0x00007fac7aa2f258 in g_main_context_iterate (context=0x757400, block=<optimized out>, dispatch=1, self=<optimized out>) at /build/buildd/glib2.0-2.30.0/./glib/gmain.c:3089
#29 0x00007fac7aa2f429 in g_main_context_iteration (context=0x757400, may_block=1) at /build/buildd/glib2.0-2.30.0/./glib/gmain.c:3152
#30 0x00007fac7fb20ed6 in QEventDispatcherGlib::processEvents (this=0x732210, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#31 0x00007fac7ef4e07e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=<optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#32 0x00007fac7faf4cf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#33 0x00007fac7faf4ef7 in QEventLoop::exec (this=0x7ffff62d6390, flags=...) at kernel/qeventloop.cpp:201
#34 0x00007fac7faf9789 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1064
#35 0x00007fac801e9546 in Akonadi::ResourceBase::init(Akonadi::ResourceBase*) () from /usr/lib/libakonadi-kde.so.4
#36 0x000000000041a716 in Akonadi::ResourceBase::init<ImapResource> (argc=<optimized out>, argv=<optimized out>) at /usr/include/akonadi/resourcebase.h:188
#37 0x00007fac7c02830d in __libc_start_main (main=0x415050 <main(int, char**)>, argc=3, ubp_av=0x7ffff62d6528, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7ffff62d6518) at libc-start.c:226
#38 0x0000000000415205 in _start ()

Possible duplicates by query: bug 248473.

Reported using DrKonqi
Comment 1 Allen Winter 2011-11-12 16:16:09 UTC
Git commit e9cf80e9e2081817c45d739b8ef216d99ddb234d by Allen Winter.
Committed on 12/11/2011 at 17:13.
Pushed by winterz into branch 'master'.

Fix a crash that can happen when all connections are lost before
checking the IMAP servers capabilities.

CCMAIL: kde-i18n-doc@kde.org
New strings needed to fix this crash. I will try to avoid creating
the new string in the 4.7 backport, somehow.

BUG: 283844
MERGE: 4.7

M  +41   -27   resources/imap/sessionpool.cpp

http://commits.kde.org/kdepim-runtime/e9cf80e9e2081817c45d739b8ef216d99ddb234d
Comment 2 Allen Winter 2011-11-12 16:25:16 UTC
Git commit c22dc06489b9d29e0651e3f7bf0f01fd1005af56 by Allen Winter.
Committed on 12/11/2011 at 17:24.
Pushed by winterz into branch 'KDE/4.7'.

Backport e9cf80e9e2081817c45d739b8ef216d99ddb234d from master:
Fix a crash that can happen when all connections are lost before
checking the IMAP servers capabilities.

CCBUG: 283844
FIXED-IN: 4.7.4

M  +5    -1    resources/imap/sessionpool.cpp

http://commits.kde.org/kdepim-runtime/c22dc06489b9d29e0651e3f7bf0f01fd1005af56