Fix a crash that can happen when all connections are lost before checking the IMAP servers capabilities.

CCMAIL: kde-i18n-doc@kde.org
New strings needed to fix this crash. I will try to avoid creating
the new string in the 4.7 backport, somehow.

BUG: 283844
MERGE: 4.7